parcel-frontend/style.css
* {
  padding: 0;
  margin: 0;
}

body {
  background-color: rgb(251, 255, 255);
}

nav {
  display: flex;
  flex-direction: row;
  width: 100vw;
  justify-content: space-between;
  background-color: rgb(11, 33, 43);
  height: 8vh;
  display: none;
}

mainnav {
  display: flex;
  justify-content: space-around;
  width: 33%;
  align-items: center;
  display: none;
}

n {
  color: rgb(205, 233, 245);
  padding: 2.1vh 20px 2.1vh 20px;
  cursor: default;
}

n:hover {
  background-color: rgb(28, 67, 85);
}

@media only screen and (max-width: 1200px){
  mainnav{
    width: 75%;
  }
}

@media only screen and (max-width: 800px){
  mainnav{
    width: 90%;
  }

  n{
    padding: 1vh 5px 1.5vh 5px;
  }
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

loginbox {
  display: flex;
  height: 92vh;
  width: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 20px;
}

.loginbutton {
  padding: 14px 50px 14px 50px;
  margin-top: 8vh;
  font-size: 25px;
}

.logininput {
  padding: 1vh 0 1vh 0;
  font-size: 20px;
}

#hidenav {
  display: none;
}

/* The side navigation menu */
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: rgb(11, 33, 43);
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: rgb(154, 195, 212);
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: rgb(230, 237, 240);
  background-color: rgb(28, 67, 85);
  transition: none;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}


.multibutton {
  background: linear-gradient(to bottom, rgb(198, 225, 236), rgb(122, 160, 177));
  background-color: rgb(154, 195, 212);
  border-color: rgb(1, 21, 31);
  color:  rgb(1, 21, 31);
  padding: .25em;
}

.multibutton:hover{
  background: linear-gradient(to top, rgb(252, 173, 69), rgb(236, 103, 26));
}

.submit, .cancel {
  max-width: 20vw;
  margin-top: 10vh;
  padding: .25em;
  min-width: 7vw;
  margin: 1.25vw;
}

.edit_buttons{
  display: flex;
  width: 50vw;
}

.medbutton{
  padding: 12px 20px;
}

.clock{
  padding: 2em;
  width: 20vw;
  text-emphasis: bold;
  font-size: 20px;
  margin: .5em;
  height: -1vw;
}

clockbutton{
  display: flex;
  justify-content: flex-end;
  width: 100%;
  height: 100%;
  align-content: flex-end;
}

#main {
  padding: 0 5vw 5vh 5vw;
  margin: 2em 0 0 2em;
  transition: 0.5s;
}

h1 {
  color: rgb(1, 21, 31);
}

.heading{
  text-align: center;
}  

table{
  margin: 1.5em;
  margin-left: 0em;
}

tr{
  font-size: 14px;
  padding: .5vh .5vw;
  border: none;
  text-align: left;
  padding: 1em;
  font-size: 20px;
}

td{
  padding: .3em;
}

th{
  width: 20vw;
}

.indextable, .indextable th, .indextable td {
  margin-left: 0;
  border-collapse: collapse;
  border-bottom: solid 1px  rgb(1, 21, 31);
}  

.indextable{
  border: solid 1px  rgb(1, 21, 31);
}  

.tableheader{
  font-weight: 800; 
  background-color: rgb(120, 161, 182);
}  

.indextable tr:nth-child(even) {
  background-color: rgb(250, 225, 201);
}  

.indextable tr:nth-child(odd) {
  background-color: rgb(247, 242, 230);
}  

.indextable{
  min-width: 700px;
}  


select{
  background-color: rgb(252, 244, 222);
}  

role_select-value:hover{
  background-color: rgb(154, 195, 212);
}  

hoursbuttons , employeebuttons {
    min-width:15vw;
    justify-content: center;
    text-align: right;
}

addemployee {
  display: flex;
  flex-direction: column;
  width: 50vw;
  height: 60vh;
  justify-content: space-between;
}

addinput {
  padding-top: 5vh;
  width: 50vw;
  display: flex;
}

label {
  width: 10vw;
  font-weight: 800;
}

input {
  width: 40vw;
  background-color: rgb(252, 244, 222);
  border: 1px solid rgb(1, 21, 31);
}

footer{
  background-color: rgb(211, 226, 235);
  position: fixed;
  bottom: 0px;
  left: 0px;
  text-align: center;
  padding: 0;
  max-width: 100vw;
  width: 100vw;
}

foot {
  display: flex;
  max-width: 95vw;
  width: 100vw;
  justify-content: space-between;
  align-items: center;
  font-weight: 800;
  font-size: 18px;
}

sf{
  display: flex;
  flex-direction: column;
  font-weight: 600;
  font-size: 13px;
}
 
#clock_box {
  border: 2px solid blue;
}

#current_time {
  color: blue;
}

#clock_in {
  color: red;
}

#clock_out {
  color: green;
}

.phone_only {
  display: none;
}
.cpu_only {
  display: inline-block;
}

@media (max-width: 700px) {
  .phone_only {
    display: inline-block;
  }
  .cpu_only {
    display: none;
  }

  .clock {
    padding: 0px;
  }

  mainnav {
    width: 100%;
  }

  n {
    padding: 0px;
    height: 100%;
    text-align: center;
    padding: 10px;
  }

  #main {
    padding: 0px;
    margin: 0px;
    margin-top: 30px;
  }

  h1 {
    font-size: 150%;
  }
  table {
    margin: 0px;
  }
  th {
    width: 36vw;
  }

  hoursbuttons {
    width: 23vw;
  }

}

